-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Bug in taming corrected

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Charming is now more dependent on attributes etc.
  * Animated bats, spiders & magpie added to char.pcx by Kahvi
  * Mola Mola added to char.pcx by Kahvi
  * Bats and spiders are now animated

July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Biting a large hedgehog now works correctly
  * Big T and P work in container UI
  * IVAN might work better on machines with a different graphics bitorder

May 27 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Code works. But it is certain that the functionality of certain changed
    functions from Timo's update on May 10 may not work.

May 11 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Some code related to mind worms added. Sadly the code hardly functions.	

May 11 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * Gorovits family life-size copy of Lenin's mummy added
	
May 10 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * An additional abstract base template for trap items
  * AI may be more intelligent when choosing whether to let another
    character or player to displace itself
  * Some typedefing and S&Ring from const <type> to c<type>, eg. const int
    -> cint & const item* -> citem* etc.
  * Added some code for an experience id system which would be a most
    powerful tool when battling abuses, but it's still very incomplete
  * The Groke added to item.pcx by Kahvi
  * A frying pan, a rolling pin and a sausage added to item.pcx by Kahvi
