@@ -137,7 +137,7 @@ lantern
   StrengthModifier = 50;
   FormModifier = 20;
   Price = 10;
-  BaseEmitation = rgb24(125, 125, 105);
+  BaseEmitation = rgb24(150, 0, 0);
   NameSingular = "lantern";
   MainMaterialConfig == GLASS;
   Alias == "light";
@@ -3579,8 +3579,7 @@ weepblade
   }
 }
 
-
-acidshield /*armor ->*/
+acidshield /* armor ->*/
 {
   DefaultSize = 60;
   Possibility = 250;
